plugins/groovy/testdata/highlighting/pre30/expressionListInForUpdate.groovy
for (;;<error descr="Multiple expressions in 'for' update are not supported in current version">1, 2, 3</error>) {

}
